--- a/Note/backend/package.json
+++ b/Note/backend/package.json
@@ -5,12 +5,17 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "@types/express-session": "^1.17.3",
     "argon2": "^0.27.1",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
+    "http-errors": "^1.8.0",
     "mongoose": "^5.11.9",
+    "nodemon": "^2.0.6",
+    "session": "^0.1.0",
+    "ts-node": "^9.1.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
