--- a/Note/backend/package.json
+++ b/Note/backend/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "@types/express-session": "^1.17.3",
     "argon2": "^0.27.1",
+    "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "express-winston": "^4.0.5",
     "http-errors": "^1.8.0",
     "mongoose": "^5.11.9",
